--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_login: ^4.2.0
   logger: ^2.0.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
